# TB_HEG_OFDF

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  documentation.md  pyproject.toml  requirements.txt  start.ps1  start.sh
data/rules/: regles_suisses_biens_restreints.md
docker/: app.Dockerfile
fake_market/: Dockerfile  app.py  dataset_manifest.json  generate_dataset.py  listings.json
mock_shop/: Dockerfile  app.py
n8n/workflows/: README.md  surveillance_mode_a.json
prompts/: browse_parse_v1.txt  browse_v1.txt  code_v1.txt  codegen_v1.txt  expand_v1.txt  parse_v1.txt  score_v1.txt
scripts/: analyze_scores.py  browse_demo.py  browse_smoke.py  capture_fixtures.py  check_persistence.py  code_repair_demo.py  collect_fake_market.py  collect_with_expand.py  debug_anibis_browse.py  demo_soutenance.py  evaluate.py  expand_demo.py  ingest_rules.py  init_qdrant.py  parse_demo.py  plot_scores.py  score_compare.py  score_sample.py  smoke_test.py  test_cloud.py  verify_browse_log.py
sql/: init.sql
src/osint/: __init__.py  config.py
tests/: test_anibis_extractor.py  test_api_explore.py  test_api_listings.py  test_api_reports.py  test_api_search.py  test_audit.py  test_browse.py  test_browse_audit.py  test_code_repair.py  test_code_sandbox.py  test_collect.py  test_collect_terms.py  test_config.py  test_evaluate_metrics.py  test_expander.py  test_guardrails.py  test_parser_llm.py  test_parsers.py  test_report.py  test_rules_corpus.py  test_scorer.py  test_selector_based_extractor.py  test_selector_extractor.py  test_selector_pagination.py
(+37 files in other folders)
